--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "cross-env NODE_ENV=production electron .",
     "lint": "standard",
     "test": "npm run lint && mocha --compilers js:babel-core/register --recursive",
-    "dist": "build -w --x64"
+    "dist": "npm run build && build -w --x64 --config electron-builder.json"
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
