--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "pouch-redux-middleware": "^0.6.0",
     "pouchdb-browser": "^6.1.1",
     "pouchdb-collate": "^6.1.1",
+    "print": "^1.0.2",
     "react": "^15.3.1",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.3.1",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.3",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
