Add gradesheet and printing process

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sis-offline-application",
-  "productName": "SIS Offline Application",
+  "name": "school-sync",
+  "productName": "School Sync",
   "version": "0.1.0",
   "author": "Techsol",
   "description": "School Information Management System",
