--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pouchdb-browser": "^6.1.1",
     "pouchdb-collate": "^6.1.1",
     "print": "^1.0.2",
+    "rc-print": "^1.0.2",
     "react": "^15.3.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^15.6.2",
